# data-xrpl-proposals

./: README.md  props2csv.awk  pyproject.toml  tsets.ipynb  tsets2csv.awk
