[tool.poetry]
name = "data-xrpl-proposals"
version = "0.1.0"
description = ""
authors = ["John Freeman <jfreeman08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.3.4"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
